--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ body {
   color: #FEF2BF;
 }
 
+.btnclickme{
+  background-color: #011F3F;
+  border: none;
+}
+
 .container {
   display: block;
   width: 50%;
@@ -50,4 +55,12 @@ body {
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
+}
+.iconfooter{
+  color:#8D8DAA;
+  font-size: 1.5rem;
+  height: 10% !important;
+  width: 10% !important;
+  padding: 5px !important;
+  margin: 5px;
 }
